changes to temlplate colors

--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -1,17 +1,36 @@
 <article id="<%= post.layout %>-<%= post.slug %>" class="article article-type-<%= post.layout %>" itemscope itemprop="blogPost">
 
+  <% if (post.title){ %>
   <header class="article-header">
     <%- partial('post/title', {class_name: 'article-title'}) %>
   </header>
+  <% } %>
 
-  <div class="article-meta">
+  <% if (post.date){ %>
+    <div class="article-meta">
     <%- partial('post/date', {class_name: 'article-date', date_format: null}) %>
     <% if (post.author){ %><div class="article-author"><%= post.author %></div><% } %>
     <%- partial('post/category') %>
   </div>
+  <% } %>
+
   <div class="article-inner">
 
     <div class="article-entry" itemprop="articleBody">
+      <% if (post.type=='slide-index'){ %>
+      <p>Here's a list of all of the existing pages as well as their corresponsing slideshows.</p>
+      <ul class="sidebar-module-list">
+        <% site.pages.each(function(post){ %>
+  
+          <% if ( (post.path.lastIndexOf('slides/', 0) === 0) && (!post.title) && (post.path!=="slides/slides.html")){ %>
+          <li>
+            <a href="<%- url_for(post.path) %>"><i class="fas fa-file-alt"></i> <%= post.path.replace('slides/', '').replace('.html', '').replace(/_/g, ' ').replace(/\d.[ab]?\s/g, ' ').replace(/\w\S*/g, function(txt){return txt.charAt(0).toUpperCase() + txt.substr(1).toLowerCase();}) || '(no title)' %></a> | <a href="<%= 'slides.html?d=' + post.path.replace('slides/','').replace('.html', '') %>"><i class="fab fa-slideshare"></i> launch slideshow</a>
+          </li>
+          <% } %>
+        <% }) %>
+      </ul>
+      <% } %>
+
       <% if (post.excerpt && index){ %>
         <%- post.excerpt %>
         <% if (theme.excerpt_link){ %>
