--- a/layout/_widget/slide_list.ejs
+++ b/layout/_widget/slide_list.ejs
@@ -1,12 +1,13 @@
+
 <% if ((site.posts.length) && (page.type!= 'slide-index')){ %>
   <div class="sidebar-module sidebar-module-inset slide-list">
     <h4>Slide Pages</h4>
     <ul class="sidebar-module-list">
-      <% site.pages.each(function(post){ %>
+      <% site.pages.sort('date', -1).each(function(post){ %>
 
         <% if ( (post.path.lastIndexOf('slides/', 0) === 0) && (!post.title) && (post.path!=="slides/slides.html")){ %>
         <li>
-          <a href="<%- url_for(post.path) %>"><i class="fas fa-file-alt"></i> <%= post.path.replace('slides/', '').replace('.html', '').replace(/_/g, ' ').replace(/\d.[ab]?\s/g, ' ').replace(/\w\S*/g, function(txt){return txt.charAt(0).toUpperCase() + txt.substr(1).toLowerCase();}) || '(no title)' %></a> <a href="<%= 'slides.html?d=' + post.path.replace('slides/','').replace('.html', '') %>"><i class="fab fa-slideshare"></i></a>
+          <a href="<%- url_for(post.path) %>"><i class="fas fa-file-alt"></i> <%= post.path.replace('slides/', '').replace('.html', '').replace(/_/g, ' ').replace(/\d.[ab]?\s/g, ' ').replace(/\w\S*/g, function(txt){return txt.charAt(0).toUpperCase() + txt.substr(1).toLowerCase();}) || '(no title)' %></a> <a href="<%= '/fid/slides/slides.html?d=' + post.path.replace('slides/','').replace('.html', '') + '&' %>"><i class="fab fa-slideshare"></i></a>
         </li>
         <% } %>
       <% }) %>
