--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -13,8 +13,7 @@
         <!-- ADD PERSISTENT NAVBAR CODE HERE -->
         <footer class="footer fadein">
           <div class="persistent">
-            <strong>Links:</strong> <a href="http://raybo.org/fid-slides">Slides</a>
-            | <a href="http://github.com/planetoftheweb/fid">Slides Repo</a>
+            <strong>Links:</strong> <a href="/fid/slides">Slide Pages</a>
             | <a href="http://github.com/planetoftheweb/fid">Class Repo</a>
             | <strong>Contact:</strong>
             <a href="https://www.linkedin.com/in/planetoftheweb">LinkedIn</a>,
