--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -7,7 +7,7 @@
 
       <div class="reveal">
         <div class="slides">
-          <section data-markdown="../slides/markdown/demo.md" data-separator="\n---\n" data-separator-notes="\n> >"></section>
+          <section data-markdown="../slides/markdown/demo.md" data-separator="\n---\n" data-separator-notes="\n### Author"></section>
         </div><!-- slides -->
     
         <!-- ADD PERSISTENT NAVBAR CODE HERE -->
