--- a/layout/_widget/recent_assignments.ejs
+++ b/layout/_widget/recent_assignments.ejs
@@ -1,19 +1,8 @@
-  <% site.categories.each(function(category){ %> 
-
-    <% if (category.name == 'assignments'){ %>
-
-      <div class="sidebar-module sidebar-module-inset assignment-list">
-      
-      <h4><%- titlecase(category.name) %></h4>
-      <%- list_posts({
-        count:5,
-        orderby: "date",
-        class: "sidebar-module-list",
-        order:-1,
-        query:{categories: 'assignment'}
-      }) %>
+      <div class="sidebar-module sidebar-module-inset assignment-list">      
+      <h4>Assignments</h4>
+      <ul class="sidebar-module-list">
+        <% site.categories.findOne({name: "assignments"}).posts.sort('date', -1).each(function(post) { %>
+          <li><a href="<%- url_for(post.path) %>"><i class="fas fa-briefcase"></i> <%= post.title %></a></li>
+        <% })%>
+        </ul>
     </div>
-    <% } %>
-  <% }) %>
-
-
