--- a/layout/_widget/useful_links.ejs
+++ b/layout/_widget/useful_links.ejs
@@ -1,34 +1,39 @@
 <div class="sidebar-module sidebar-module-inset">
   <h4>Class Links</h4>
   <ul>
-      <li><a href="http://github.com/planetoftheweb/fid">Github Repo</a></li>
-      <li><a href="http://github.com/planetoftheweb/slides/slides.html">Slides</a></li>
-      <li><a href="https://github.com/planetoftheweb/FID/issues">Submit an issue</a></li>
-      <li><a href="http://www.seminolestate.edu/computers/labhours/">Lab Hours</a></li>
-      <li><a href="https://www.seminolestate.edu/catalog/#calendar">Academic Calendars</a></li>
+      <li><a href="http://github.com/planetoftheweb/fid"><i class="fas fa-external-link-square-alt"></i> Github Repo</a></li>
+      <li><a href="http://github.com/planetoftheweb/slides/slides.html"><i class="fas fa-external-link-square-alt"></i> Slides</a></li>
+      <li><a href="https://github.com/planetoftheweb/FID/issues"><i class="fas fa-external-link-square-alt"></i> Submit an issue</a></li>
+      <li><a href="http://www.seminolestate.edu/computers/labhours"><i class="fas fa-external-link-square-alt"></i> Lab Hours</a></li>
+      <li><a href="https://www.seminolestate.edu/catalog/#calendar"><i class="fas fa-external-link-square-alt"></i> Academic Calendars</a></li>
   </ul>
-  <h4>Code Editors</h4>
-  <ul>
-      <li><a href="https://code.visualstudio.com/">Visual Studio Code</a></li>
-      <li><a href="https://atom.io/">Atom</a></li>
+</div>
+<div class="sidebar-module sidebar-module-inset">
+    <h4>Code Editors</h4>
+        <ul>
+      <li><a href="https://code.visualstudio.com"><i class="fas fa-code"></i> Visual Studio Code</a></li>
+      <li><a href="https://atom.io"><i class="fas fa-code"></i> Atom</a></li>
   </ul>
-
-  <h4>Online Resources</h4>
+</div>
+<div class="sidebar-module sidebar-module-inset">
+    <h4>Online Resources</h4>
   <ul>
-      <li><a href="https://developer.mozilla.org">MDN</a></li>
-      <li><a href="https://css-tricks.com/">CSS Tricks</a></li>
-      <li><a href="https://codepen.io/">Codepen</a></li>
-      <li><a href="http://jsbin.com/">JS Bin</a></li>      
+      <li><a href="https://developer.mozilla.org"><i class="fas fa-globe"></i> MDN</a></li>
+      <li><a href="https://css-tricks.com"><i class="fas fa-globe"></i> CSS Tricks</a></li>
+      <li><a href="https://codepen.io"><i class="fas fa-globe"></i> Codepen</a></li>
+      <li><a href="http://jsbin.com"><i class="fas fa-globe"></i> JS Bin</a></li>      
   </ul>
-      <h4>Lynda.com Tutorials</h4>
+</div>
+<div class="sidebar-module sidebar-module-inset">
+    <h4>Lynda.com Tutorials</h4>
   <ul>
-      <li><a href="https://www.lynda.com/NA-tutorials/How-use-Lynda-com/77683-2.html">Using Lynda.com</a></li>
-      <li><a href="https://www.lynda.com/Visual-Studio-tutorials/Visual-Studio-Code-Web-Developers/588785-2.html">VS Code</a></li>
-      <li><a href="https://www.lynda.com/Web-Development-tutorials/Learn-Atom-Basics/468147-2.html">Atom</a></li>
-      <li><a href="https://www.lynda.com/Web-Development-tutorials/HTML-Essential-Training/170427-2.html">HTML</a></li>
-      <li><a href="https://www.lynda.com/CSS-tutorials/CSS-Essential-Training-1/569190-2.html">CSS 1</a></li>
-      <li><a href="https://www.lynda.com/CSS-tutorials/CSS-Essential-Training-2/569189-2.html">CSS 2</a></li>
-      <li><a href="https://www.lynda.com/CSS-tutorials/CSS-Essential-Training-3/609030-2.html">CSS 3</a></li>
-      <li><a href="https://www.lynda.com/Bootstrap-tutorials/Bootstrap-4-Essential-Training/372545-2.html">Bootstrap 4</a></li>
+      <li><a href="https://www.lynda.com/NA-tutorials/How-use-Lynda-com/77683-2.html"><i class="icon icon-lynda"></i> Using Lynda</a></li>
+      <li><a href="https://www.lynda.com/Visual-Studio-tutorials/Visual-Studio-Code-Web-Developers/588785-2.html"><i class="icon icon-lynda"></i> VS Code</a></li>
+      <li><a href="https://www.lynda.com/Web-Development-tutorials/Learn-Atom-Basics/468147-2.html"><i class="icon icon-lynda"></i> Atom</a></li>
+      <li><a href="https://www.lynda.com/Web-Development-tutorials/HTML-Essential-Training/170427-2.html"><i class="icon icon-lynda"></i> HTML</a></li>
+      <li><a href="https://www.lynda.com/CSS-tutorials/CSS-Essential-Training-1/569190-2.html"><i class="icon icon-lynda"></i> CSS 1</a></li>
+      <li><a href="https://www.lynda.com/CSS-tutorials/CSS-Essential-Training-2/569189-2.html"><i class="icon icon-lynda"></i> CSS 2</a></li>
+      <li><a href="https://www.lynda.com/CSS-tutorials/CSS-Essential-Training-3/609030-2.html"><i class="icon icon-lynda"></i> CSS 3</a></li>
+      <li><a href="https://www.lynda.com/Bootstrap-tutorials/Bootstrap-4-Essential-Training/372545-2.html"><i class="icon icon-lynda"></i> Bootstrap 4</a></li>
   </ul>
 </div>
